--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -272,7 +272,7 @@
                 {% else %}
                     <!-- AFTER DETECT -->
                     <button class="btn btn-warning" onclick="clearForm()">
-                        Clear & Upload New
+                        Clear
                     </button>
                 {% endif %}
             </div>
