--- a/templates/register.html
+++ b/templates/register.html
@@ -87,11 +87,11 @@
                 <div class="section-title mb-2">Account Details</div>
 
                 <div class="mb-3">
-                    <input type="text" name="username" class="form-control" placeholder="Username" required>
+                    <input type="text" name="username" class="form-control" placeholder="Username" required autocomplete="off">
                 </div>
 
                 <div class="mb-3">
-                    <input type="password" name="password" class="form-control" placeholder="Password" required>
+                    <input type="password" name="password" class="form-control" placeholder="Password" required autocomplete="off">
                 </div>
             </div>
 
